update docs, comments
